// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-menu-item changes to anchor tag based on an href prop 1`] = `
<rux-menu-item href="https://www.astrouxds.com">
  <mock:shadow-root>
    <li>
      <a href="https://www.astrouxds.com">
        <slot name="start"></slot>
        <slot></slot>
      </a>
    </li>
  </mock:shadow-root>
</rux-menu-item>
`;

exports[`rux-menu-item renders 1`] = `
<rux-menu-item>
  <mock:shadow-root>
    <li>
      <div>
        <slot name="start"></slot>
        <slot></slot>
      </div>
    </li>
  </mock:shadow-root>
</rux-menu-item>
`;
